scrollbar fixed

--- a/briquiny-frontend/src/Components/Footer/footer.scss
+++ b/briquiny-frontend/src/Components/Footer/footer.scss
@@ -8,7 +8,7 @@ $five: #fff;
   background-color: $primary;
   color: $five;
   height: fit-content;
-  width: 100vw;
+  width:100%;
   padding: 5vh 5vw;
   display: flex;
   flex-direction: column;
