--- a/briquiny-frontend/src/pages/Briquiny_home/briquiny_home.scss
+++ b/briquiny-frontend/src/pages/Briquiny_home/briquiny_home.scss
@@ -5,7 +5,7 @@ $four: #628395;
 $five: #fff;
 
 .home{
-  width: 100vw;
+  width: 100%;
 }
 
 .home_main_img{
@@ -83,6 +83,9 @@ $five: #fff;
         background-color: $secondary;
         font-size: 15px;
       }
+      h2:nth-child(2){
+        color: $four;
+      }
       p{
         width: 100%;
         text-align: justify;
@@ -149,6 +152,7 @@ $five: #fff;
       justify-content: center;
       font-size: 30px;
       text-align: center;
+      font-weight: bold;
     }//structure_item
   }
   @media screen and (max-width: 1200px) {
